--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -140,4 +140,8 @@
     <string name="b">B</string>
     <string name="c">C</string>
     <string name="d">D</string>
+    <string name="d_hours_02d_minutes_02d_seconds">%d horas %02d minutos %02d segundos</string>
+    <string name="d_minutes_02d_seconds">%d minutos %02d segundos</string>
+    <string name="d_seconds">%d segundos</string>
+    <string name="_0_second">0 segundo</string>
 </resources>
