--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,8 @@
     <string name="b">B</string>
     <string name="c">C</string>
     <string name="d">D</string>
+    <string name="d_hours_02d_minutes_02d_seconds">%d hours %02d minutes %02d seconds</string>
+    <string name="d_minutes_02d_seconds">%d minutes %02d seconds</string>
+    <string name="d_seconds">%d seconds</string>
+    <string name="_0_second">0 second</string>
 </resources>
