--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,4 +148,11 @@
     <string name="d_minutes_02d_seconds">%d minutes %02d seconds</string>
     <string name="d_seconds">%d seconds</string>
     <string name="_0_second">0 second</string>
+    <string name="chukwudi_edoga">Chukwudi Edoga</string>
+    <string name="clinton_onuigbo">Clinton Onuigbo</string>
+    <string name="dike_kingsley_oneh">Dike Kingsley Oneh</string>
+    <string name="ubesie_kenechukwu">Ubesie Kenechukwu</string>
+    <string name="vincent_sunday">Vincent Sunday</string>
+    <string name="toochukwu_dennis">Toochukwu Dennis</string>
+    <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
 </resources>
