--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -145,5 +145,12 @@
     <string name="d_minutes_02d_seconds">%d minutos %02d segundos</string>
     <string name="d_seconds">%d segundos</string>
     <string name="_0_second">0 segundos</string>
+    <string name="chukwudi_edoga">Chukwudi Edoga</string>
+    <string name="clinton_onuigbo">Clinton Onuigbo</string>
+    <string name="dike_kingsley_oneh">Dike Kingsley Oneh</string>
+    <string name="ubesie_kenechukwu">Ubesie Kenechukwu</string>
+    <string name="vincent_sunday">Vincent Sunday</string>
+    <string name="toochukwu_dennis">Toochukwu Dennis</string>
+    <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
 
 </resources>
