--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -146,4 +146,11 @@
     <string name = "d_minutes_02d_seconds">%d منٹ %02d سیکنڈ</string>
     <string name="d_seconds">%d سیکنڈز</string>
     <string name="_0_second">0 سیکنڈ</string>
+    <string name = "chukwudi_edoga">چکوودی ایڈوگا</string>
+    <string name = "clinton_onuigbo">Clinton Onuigbo</string>
+    <string name = "dike_kingsley_oneh">Dike Kingsley Oneh</string>
+    <string name="ubesie_kenechukwu">Ubesie Kenechukwu</string>
+    <string name = "vincent_sunday"> ونسنٹ سنڈے</string>
+    <string name = "toochukwu_dennis">Toochukwu Dennis</string>
+    <string name = "amos_lucky_chibueze">Amos Lucky Chibueze</string>
 </resources>
