--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -29,8 +29,8 @@
     <string name="urdu">الأردية</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
-    <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
-    <string name="rewardedad_adunit">ca-app-pub-4696224049420135/7768937909</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
     <string name="ad_copy">لقد ربحت للتو 000 في لعبة المليونير. أدعوك للعب لعبة المليونير الرائعة والمثيرة لتحسين معرفتك.
 \n\nاضربني إذا استطعت!!!
        \n111
