--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -29,8 +29,8 @@
     <string name="urdu">urdu</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
-    <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
-    <string name="rewardedad_adunit">ca-app-pub-4696224049420135/7768937909</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
     <string name="ad_copy">Acabo de ganar 000 en el juego millonario. Te invito a jugar el increíble y emocionante juego millonario para mejorar tus conocimientos.
 \n\n¡¡¡Venceme si puedes!!!
        \n111
