--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -29,8 +29,8 @@
     <string name="urdu">उर्दू</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
-    <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
-    <string name="rewardedad_adunit">ca-app-pub-4696224049420135/7768937909</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
     <string name="ad_copy">मैंने अभी-अभी करोड़पति गेम में 000 जीते हैं। मैं आपको अपने ज्ञान को बेहतर बनाने के लिए अद्भुत और रोमांचक करोड़पति गेम खेलने के लिए आमंत्रित करता हूं।
 \n\nअगर तुम कर सकते हो तो मुझे मारो!!!
        \n111
