--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,8 +38,8 @@
     <string name="urdu">Ourdou</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
-    <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
-    <string name="rewardedad_adunit">ca-app-pub-4696224049420135/7768937909</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
     <string name="ad_copy">Je viens de gagner 000 dans le jeu du millionnaire. Je t\'invite à jouer au jeu du millionnaire, impressionnant et excitant, pour améliorer tes connaissances.
 \n\nBattez-moi si vous le pouvez !!!
         \n111
