--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -29,8 +29,8 @@
     <string name="urdu">اردو</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
-    <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
-    <string name="rewardedad_adunit">ca-app-pub-4696224049420135/7768937909</string>
+    <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
+    <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
     <string name="ad_copy">میں نے ملینیئر کھیل میں 000 جیت لیا ہے۔ میں آپ کو دعوت دیتا ہوں کہ اپنی علم کو بہتر بنانے کے لئے شاندار اور دلچسپ ملینیئر کھیل کھیلیں۔
 \n\nاگر آپ مجھ سے مقابلہ کر سکتے ہیں تو مجھے شکست دو!!!
 \n111
