--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -27,7 +27,9 @@
     <string name="arabic">عربي</string>
     <string name="hindi">الهندية</string>
     <string name="urdu">الأردية</string>
-    <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
+    <string name="german">ألمانية</string>
+    <string name="japanese">اليابانية</string>
+    <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
     <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
