--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -27,7 +27,9 @@
     <string name="arabic">عربی</string>
     <string name="hindi">ہندی</string>
     <string name="urdu">اردو</string>
-    <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
+    <string name="german">جرمن</string>
+    <string name="japanese">جاپانی</string>
+    <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
     <string name="rewarded_ad_unit_id">ca-app-pub-4696224049420135/7768937909</string>
