--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -156,4 +156,5 @@
     <string name="vincent_sunday">فنسنت صنداي</string>
     <string name="toochukwu_dennis">توتشوكوو دينيس</string>
     <string name="amos_lucky_chibueze">عاموس لاكي تشيبويز</string>
+    <string name="next_question">التالي</string>
 </resources>
