--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -156,5 +156,6 @@
     <string name="vincent_sunday">Vincent Sunday</string>
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
+    <string name="next_question">Suivant</string>
 
 </resources>
