--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -155,4 +155,5 @@
     <string name = "vincent_sunday">विन्सेंट रविवार</string>
     <string name='toochukwu_dennis'>टूचुकुवु डेनिस</string>
     <string name = "amos_lucky_chibueze">अमोस लकी चिबुएज़</string>
+    <string name="next_question">अगला</string>
 </resources>
