--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -155,4 +155,5 @@
     <string name = "vincent_sunday"> ونسنٹ سنڈے</string>
     <string name = "toochukwu_dennis">ٹوچوکو ڈینس</string>
     <string name = "amos_lucky_chibueze">اموس لکی چیبیوز</string>
+    <string name="next_question">اگلے</string>
 </resources>
