--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -155,5 +155,6 @@
     <string name="vincent_sunday">ヴィンセント サンデー</string>
     <string name="toochukwu_dennis">トゥチュクウ デニス</string>
     <string name="amos_lucky_chibueze">アモス ラッキー チブエゼ</string>
+    <string name="next_question">次</string>
 
 </resources>
