--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -156,4 +156,5 @@
     <string name="vincent_sunday">Vincent Sunday</string>
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
+    <string name="next_question">Nächste</string>
 </resources>
