--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -157,4 +157,5 @@
     <string name="vincent_sunday">Vincent Sunday</string>
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
+    <string name="next_question">Próximo</string>
 </resources>
