--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -29,6 +29,8 @@
     <string name="urdu">اردو</string>
     <string name="german">جرمن</string>
     <string name="japanese">جاپانی</string>
+    <string name="turkish">ترکی</string>
+    <string name="indonesian">انڈونیشین</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -156,4 +158,5 @@
     <string name = "toochukwu_dennis">ٹوچوکو ڈینس</string>
     <string name = "amos_lucky_chibueze">اموس لکی چیبیوز</string>
     <string name="next_question">اگلے</string>
+    <string name="_15">15</string>
 </resources>
