--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -29,6 +29,8 @@
     <string name="urdu">उर्दू</string>
     <string name="german">जर्मन</string>
     <string name="japanese">जापानी</string>
+    <string name="turkish">तुर्की</string>
+    <string name="indonesian">इन्डोनेशियाई</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -156,4 +158,5 @@
     <string name='toochukwu_dennis'>टूचुकुवु डेनिस</string>
     <string name = "amos_lucky_chibueze">अमोस लकी चिबुएज़</string>
     <string name="next_question">अगला</string>
+    <string name="_15">15</string>
 </resources>
