--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,6 +29,8 @@
     <string name="urdu">Urdu</string>
     <string name="german">Deutsch</string>
     <string name="japanese">japanisch</string>
+    <string name="turkish">Türkisch</string>
+    <string name="indonesian">Indonesisch</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -157,4 +159,5 @@
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
     <string name="next_question">Nächste</string>
+    <string name="_15">15</string>
 </resources>
