--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -29,6 +29,8 @@
     <string name="urdu">ウルドゥー語</string>
     <string name="german">ドイツ人</string>
     <string name="japanese">日本語</string>
+    <string name="turkish">トルコ語</string>
+    <string name="indonesian">インドネシア語</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -156,5 +158,6 @@
     <string name="toochukwu_dennis">トゥチュクウ デニス</string>
     <string name="amos_lucky_chibueze">アモス ラッキー チブエゼ</string>
     <string name="next_question">次</string>
+    <string name="_15">15</string>
 
 </resources>
