--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="urdu">Urdu</string>
     <string name="german">German</string>
     <string name="japanese">Japanese</string>
+    <string name="turkish">Turkish</string>
+    <string name="indonesian">Indonesian</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -158,4 +160,5 @@
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
     <string name="next_question">Next</string>
+    <string name="_15">15</string>
 </resources>
