--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,6 +38,8 @@
     <string name="urdu">Ourdou</string>
     <string name="german">Allemand</string>
     <string name="japanese">Japonais</string>
+    <string name="turkish">Turc</string>
+    <string name="indonesian">Indonésien</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
@@ -157,5 +159,6 @@
     <string name="toochukwu_dennis">Toochukwu Dennis</string>
     <string name="amos_lucky_chibueze">Amos Lucky Chibueze</string>
     <string name="next_question">Suivant</string>
+    <string name="_15">15</string>
 
 </resources>
