--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,6 +20,7 @@
     <string name="theme_1">Tema 1</string>
     <string name="theme_2">Tema 2</string>
     <string name="theme_3">Tema 3</string>
+    <string name="language_">Türkçe</string>
     <string name="english">İngilizce</string>
     <string name="french">Fransızca</string>
     <string name="spanish">İspanyol</string>
@@ -31,6 +32,11 @@
     <string name="japanese">Japonca</string>
     <string name="turkish">Türkçe</string>
     <string name="indonesian">Endonezya dili</string>
+    <string name="malay">Malayca</string>
+    <string name="thai">Tay dili</string>
+    <string name="korean">Koreli</string>
+    <string name="chinese">Çince</string>
+    <string name="vietnamese">Vietnam</string>
     <string name="banner_ad_unit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-4696224049420135/9312479087</string>
